History of collective.recipe.i18noverrides
==========================================

0.2 (unreleased)
----------------

- Specify a package where the source directory can be found
  [gotcha]

- Pin packages (at least zc.buildout) in both the main buildout.cfg
  and the one in the tests, to avoid test failures simply because the
  used zc.buildout is upgraded during the test run.
  [maurits]


0.1 (2009-06-05)
----------------

- Initial implementation moved over from a one-off script.  [maurits]

- Created recipe with ZopeSkel
  [Maurits van Rees]